# mobilenetv2_ssdlite_ncnn

./: CMakeLists.txt  build_aarch64_linux_gnu.sh  build_host_gcc_linux.sh  mobilenetv2ssdlite.cpp  run_demo.sh  ssdlite_192x192.cpp
models/: calibrate.sh  quantilize.sh
models/mbv2_ssdlite_192x192/: mobilenetv2_ssdlite_voc.param
models/mbv2_ssdlite_192x192_int8/: mobilenetv2_ssdlite_voc.param
models/mbv2_ssdlite_int8/: mobilenetv2_ssdlite_voc.param
